<package>
  <name>ros_logicam</name>
  <version>0.0.1</version>
  <description>A ROS Driver for V4L USB Cameras</description>

  <maintainer email="andrey.vukolov@elettra.eu">Andrey Vukolov</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>

</package>
